[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Thomas Simonet <contact@thomassimonet.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
